feat: Update Java best practices and add migration skill for Java 8 to 25