@@ -1,21 +1,24 @@
 ---
 name: java-best-practices
-description: Use this skill when working with Java code, Optional handling, CompletableFuture, records, sealed classes, or virtual threads.
-version: 1.0.0
+description: Use this skill when working with Java 11 through Java 25 code, Optional handling, HTTP Client, CompletableFuture, records, sealed classes, virtual threads, scoped values, or Java modernization.
+version: 1.2.0
 metadata:
   mcpmarket-version: 1.0.0
 ---
 # Java Best Practices
 
-Guidance for writing type-safe, concurrent, and modern Java code targeting Java 17+ and Java 21 LTS. Covers null safety, concurrency patterns, and modern language features.
+Guidance for writing type-safe, concurrent, modern Java 11 through Java 25 code. Covers null safety, concurrency patterns, and modern language features.
+
+For Java 8 to Java 25 migration strategy, use sibling skill `../java-8-to-25-migration`.
 
 ## Core Principles
 
 1. **Null safety first**: Use Optional for return values, @Nullable/@NonNull for parameters
 2. **Immutability preferred**: Use records for data carriers, final fields where possible
 3. **Explicit error handling**: Use checked exceptions sparingly, prefer Result patterns
-4. **Modern features**: Leverage records, sealed classes, and pattern matching
-5. **Virtual threads for IO**: Use virtual threads (Java 21) for IO-bound operations
+4. **Modern features**: Leverage Java 11-25 features when they reduce code without changing behavior
+5. **Virtual threads for IO**: Use virtual threads (Java 21+) for IO-bound operations
+6. **Preview caution**: Use Java 25 preview/incubator features only when build flags, runtime flags, and upgrade risk are acceptable
 
 ## Type Safety
 
@@ -175,6 +178,27 @@ List<User> users = userIds.stream()
     .collect(Collectors.toList());
 ```
 
+### Java 11 String and Optional Helpers
+
+```java
+// Good - explicit blank validation
+public User createUser(String name) {
+    Objects.requireNonNull(name, "name");
+    if (name.isBlank()) {
+        throw new IllegalArgumentException("name is required");
+    }
+    return new User(name.strip());
+}
+
+// Good - clearer absence branch
+Optional<User> user = findByEmail(email);
+if (user.isEmpty()) {
+    audit.missingUser(email);
+}
+```
+
+Do not replace `trim()` with `strip()` unless Unicode whitespace handling is intended.
+
 ## Concurrency
 
 ### CompletableFuture Basics
@@ -199,6 +223,27 @@ CompletableFuture<UserProfile> profile = CompletableFuture
         preferencesFuture.join()
     ));
 ```
+
+### Java 11 HTTP Client
+
+Use `java.net.http.HttpClient` for simple HTTP/2, WebSocket, and JSON-over-HTTP integrations when behavior matches existing clients.
+
+```java
+HttpClient client = HttpClient.newBuilder()
+    .connectTimeout(Duration.ofSeconds(3))
+    .build();
+
+HttpRequest request = HttpRequest.newBuilder(uri)
+    .timeout(Duration.ofSeconds(5))
+    .GET()
+    .build();
+
+HttpResponse<String> response = client.send(
+    request,
+    HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8));
+```
+
+Do not replace mature clients blindly. Match timeout, proxy, TLS, pooling, retry, and observability behavior first.
 
 ### CompletableFuture Error Handling
 
@@ -256,7 +301,7 @@ CompletableFuture<String> fastest = CompletableFuture.anyOf(
 ).thenApply(result -> (String) result);
 ```
 
-### Virtual Threads (Java 21)
+### Virtual Threads (Java 21+)
 
 ```java
 // Good - virtual threads for IO-bound tasks
@@ -271,17 +316,38 @@ try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
     }
 }
 
-// Good - structured concurrency (Java 21 preview)
-try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
-    Subtask<User> userTask = scope.fork(() -> fetchUser(id));
-    Subtask<List<Order>> ordersTask = scope.fork(() -> fetchOrders(id));
+// Good - structured concurrency with Joiner (Java 25 preview)
+try (var scope = StructuredTaskScope.open(
+        StructuredTaskScope.Joiner.<Response>allSuccessfulOrThrow())) {
+    requests.forEach(request -> scope.fork(() -> client.send(request)));
 
-    scope.join();
-    scope.throwIfFailed();
-
-    return new UserWithOrders(userTask.get(), ordersTask.get());
+    return scope.join()
+        .map(Subtask::get)
+        .toList();
 }
 ```
+
+### Scoped Values (Java 25)
+
+Use scoped values for immutable request context shared with callees and child threads. Prefer them over `ThreadLocal` for virtual-thread-heavy code when data has lexical scope.
+
+```java
+private static final ScopedValue<RequestContext> REQUEST_CONTEXT =
+    ScopedValue.newInstance();
+
+public Response handle(Request request) throws Exception {
+    RequestContext context = RequestContext.from(request);
+
+    return ScopedValue.where(REQUEST_CONTEXT, context)
+        .call(() -> service.handle(request));
+}
+
+public User currentUser() {
+    return REQUEST_CONTEXT.get().user();
+}
+```
+
+Use `ThreadLocal` only when existing libraries require it or data must outlive a lexical operation boundary.
 
 ### When to Use Virtual Threads
 
@@ -411,7 +477,61 @@ public <T> CompletableFuture<T> withRetry(
 
 ## Modern Java Features
 
-### Records (Java 17+)
+### Local Variable Type Inference (Java 10+, in scope for Java 11+)
+
+```java
+// Good - inferred type is clear
+var usersById = new HashMap<String, User>();
+var activeUsers = userRepository.findActiveUsers();
+
+// Bad - inferred type hides domain meaning
+var result = service.execute(command);
+```
+
+Use `var` for local variables only. Never change public API signatures to hide types.
+
+### Switch Expressions (Java 14+)
+
+```java
+// Good - switch as expression
+public String getDayType(DayOfWeek day) {
+    return switch (day) {
+        case MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY -> "Weekday";
+        case SATURDAY, SUNDAY -> "Weekend";
+    };
+}
+
+// Good - with yield for complex cases
+public int calculate(Operation op, int a, int b) {
+    return switch (op) {
+        case ADD -> a + b;
+        case SUBTRACT -> a - b;
+        case MULTIPLY -> a * b;
+        case DIVIDE -> {
+            if (b == 0) {
+                throw new ArithmeticException("Division by zero");
+            }
+            yield a / b;
+        }
+    };
+}
+```
+
+Convert only value-producing switch logic. Preserve intentional fall-through behavior.
+
+### Text Blocks (Java 15+)
+
+```java
+String query = """
+    SELECT id, name
+    FROM users
+    WHERE active = true
+    """;
+```
+
+Use text blocks for SQL, JSON, XML, and expected-output tests. Verify indentation and trailing newline behavior before replacing concatenated strings.
+
+### Records (Java 16+)
 
 ```java
 // Good - immutable data carrier with automatic equals, hashCode, toString
@@ -538,7 +658,7 @@ public sealed interface Result<T>
 }
 ```
 
-### Pattern Matching for instanceof (Java 17+)
+### Pattern Matching for instanceof (Java 16+)
 
 ```java
 // Good - pattern matching eliminates cast
@@ -598,50 +718,110 @@ public String process(String input) {
 }
 ```
 
-### Switch Expressions (Java 17+)
+### Sequenced Collections (Java 21+)
+
+Use sequenced collection APIs when encounter order is part of the contract:
 
 ```java
-// Good - switch as expression
-public String getDayType(DayOfWeek day) {
-    return switch (day) {
-        case MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY -> "Weekday";
-        case SATURDAY, SUNDAY -> "Weekend";
-    };
-}
+SequencedMap<String, User> users = new LinkedHashMap<>();
+users.put("first", firstUser);
+users.put("last", lastUser);
 
-// Good - with yield for complex cases
-public int calculate(Operation op, int a, int b) {
-    return switch (op) {
-        case ADD -> a + b;
-        case SUBTRACT -> a - b;
-        case MULTIPLY -> a * b;
-        case DIVIDE -> {
-            if (b == 0) {
-                throw new ArithmeticException("Division by zero");
-            }
-            yield a / b;
+User first = users.firstEntry().getValue();
+User last = users.lastEntry().getValue();
+SequencedMap<String, User> newestFirst = users.reversed();
+```
+
+Do not use sequenced APIs to imply order for unordered collection implementations.
+
+### Foreign Function and Memory API (Java 22+)
+
+Use the Foreign Function and Memory API as a replacement path for selected JNI or `Unsafe` memory access only when native boundaries are isolated and tested:
+
+```java
+try (Arena arena = Arena.ofConfined()) {
+    MemorySegment segment = arena.allocate(ValueLayout.JAVA_INT);
+    segment.set(ValueLayout.JAVA_INT, 0, 42);
+}
+```
+
+Keep application code behind domain-specific native adapters.
+
+### Java 23-24 Migration Signals
+
+- Use Markdown Javadoc for new or heavily edited docs only when generated output is checked.
+- Replace withdrawn string template preview usage with `String.format`, `MessageFormat`, a template engine, or explicit builders.
+- Treat native access and `sun.misc.Unsafe` memory-access warnings as dependency upgrade signals before source edits.
+
+### Java 25 Language Updates
+
+Use permanent Java 25 language features when they make existing code clearer without changing behavior:
+
+```java
+// Good - validate constructor arguments before delegating (Java 25)
+public class PositiveRange extends Range {
+    public PositiveRange(int start, int end) {
+        if (start < 0 || end < 0) {
+            throw new IllegalArgumentException("Range must be positive");
         }
+        super(start, end);
+    }
+}
+```
+
+Compact source files and instance `main` methods are useful for scripts, examples, and teaching code. Keep normal class structure for production application entrypoints unless project style explicitly permits compact source files.
+
+```java
+void main() {
+    IO.println("Hello, Java 25");
+}
+```
+
+Use Java 25 preview features only behind explicit preview build and runtime flags:
+
+```java
+// Preview - primitive patterns in switch
+String describe(int value) {
+    return switch (value) {
+        case byte b -> "byte-sized: " + b;
+        case int i when i > 0 -> "positive int: " + i;
+        default -> "other";
     };
 }
 ```
 
+Avoid converting ordinary imports to module import declarations in application code unless the project has adopted that preview feature.
+
 ## Quick Reference: Modern Features Checklist
 
+- [ ] Keep compile/runtime migration separate from optional modernization
 - [ ] Use records for immutable data carriers (DTOs, value objects)
+- [ ] Use `var` only when inferred local type remains obvious
+- [ ] Use text blocks only after verifying whitespace and trailing newline behavior
 - [ ] Add validation in compact constructors
 - [ ] Use sealed classes to restrict type hierarchies
 - [ ] Combine sealed interfaces with records for algebraic data types
 - [ ] Use pattern matching with instanceof to avoid explicit casts
 - [ ] Use switch expressions instead of switch statements
+- [ ] Use sequenced collection APIs only when encounter order is part of the contract
+- [ ] Keep FFM usage behind tested native adapters
+- [ ] Replace withdrawn string template preview usage before targeting Java 23+
+- [ ] Treat native access and Unsafe warnings as dependency upgrade signals
 - [ ] Leverage exhaustive pattern matching with sealed types
 - [ ] Use guards in switch patterns for conditional matching
+- [ ] Use Java 25 flexible constructor bodies for validation before `super(...)` when it removes fragile constructor workarounds
+- [ ] Keep compact source files and instance `main` methods to scripts, examples, or explicitly approved project style
+- [ ] Gate Java 25 preview/incubator features behind explicit `--enable-preview` or module requirements
 
 ## Quick Reference: Concurrency Checklist
 
+- [ ] Use Java 11 `HttpClient` only when behavior matches existing HTTP clients
 - [ ] Use `CompletableFuture` for async operations, not raw threads
 - [ ] Handle errors with `exceptionally()` or `handle()`
 - [ ] Use `allOf()` for parallel operations that all must complete
-- [ ] Use virtual threads (Java 21) for IO-bound tasks
+- [ ] Use virtual threads (Java 21+) for IO-bound tasks
+- [ ] Prefer scoped values (Java 25) over `ThreadLocal` for lexically scoped immutable context
+- [ ] Use structured concurrency only when preview features are enabled
 - [ ] Use platform threads/ForkJoinPool for CPU-bound tasks
 - [ ] Always shutdown ExecutorService in finally block or try-with-resources
 - [ ] Prefer immutable objects and records for thread safety
